syntax = "proto3";

package im.dlg.sdk.calls.client.history.api;
option java_package = "im.dlg.sdk.calls.client.history.api";
option swift_prefix = "Dialog_";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

service CallHistoryService {
    // Удаление записи истории звонков
    rpc deleteCall (DeleteCallRequest) returns (DeleteCallResponse) {};
    
    rpc getDiff (GetDiffRequet) returns (GetDiffResponse) {}
    
    rpc getPage (GetPageRequest) returns (GetPageResponse) {}
    
    rpc connect (stream ConnectRequest) returns (stream ConnectResponse) {};
}

// Направление звонка
enum CALL_DIRECTION {
    CALL_DIRECTION_UNKNOWN = 0;
    CALL_DIRECTION_INBOUND = 1;
    CALL_DIRECTION_OUTBOUND = 2;
}

message DeletedCallModel {
    string callId = 1;
    int64 seq = 2;
}

message CreatedCallModel {

    // Структура участника звонка
    message CallParticipantModel {
        map<string, string> parameters = 1;
    }
    
    // Причина завершения
    message CallResultModel {

        // Отменен
        message CallResultCancelled {
        }

        // Отклонен
        message CallResultRejected {
        }

        // Занято
        message CallResultBusy {
        }

        // Завершился после разговора
        message CallResultFinished {
        }

        // Переведен
        message CallResultTransferred {
        }

        message CallResultOneOf {

            oneof result {
                CallResultCancelled cancelled = 1;
                CallResultRejected rejected = 2;
                CallResultBusy busy = 3;
                CallResultFinished finished = 5;
                CallResultTransferred transferred = 6;
            }
        }

        CallResultOneOf result = 1;
    }

    // SEQ
    int64 seq = 1;

    // Идентификатор звонка
    string callId = 2;

    // Начат
    int64 started = 3;

    // Длительность (для не отвеченных - длительность набора/ожидания)
    int64 duration = 4;

    // Причина завершения
    CallResultModel result = 5;

    // Направление звонка
    CALL_DIRECTION direction = 6;
    
    // Участники звонка
    repeated CallParticipantModel participants = 7;
}

message GetPageRequest {
    message GetPageRequestFromModel {
        int64 seq = 1;
        int64 date = 2;
    }
    
    int32 size = 1;
    GetPageRequestFromModel from = 2;
}

message GetPageResponse {
    repeated CreatedCallModel calls = 1;
}

message GetDiffRequet {
    google.protobuf.Int64Value seq = 1;
    int32 pageSize = 2;
}

message GetDiffResponse {
    message GetDiffResponseDiffModel {
        repeated DeletedCallModel deletedCalls = 1;
        repeated CreatedCallModel createdCalls = 2;
    }
    
    oneof response {
        GetDiffResponseDiffModel diff = 1;
        GetPageResponse page = 2;
    }
}

message DeleteCallRequest {
    repeated string callId = 1;
}

message DeleteCallResponse {
    
}

// Подключение стримом
message ConnectRequest {
}

message ConnectResponse {
    oneof data {
        DeletedCallModel deletedCall = 1;
        CreatedCallModel createdCall = 2;
    }
}
